kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: byrnbaker-blog
  namespace: byrnbaker-blog
spec:
  selector:
    matchLabels:
      app: byrnbaker-blog
  replicas: 3
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 1
  template:
    metadata:
      labels:
        app: byrnbaker-blog
      annotations:
        deploy-date: "deploy-date-value"
    spec:
      containers:
        - name: byrnbaker-blog
          image: "registry-value:latest"
          imagePullPolicy: Always
          resources:
            requests:
              memory: 100Mi
              cpu: 100m
          ports:
            - containerPort: 80
              name: http
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 5
            timeoutSeconds: 5
          readinessProbe:
            initialDelaySeconds: 5
            successThreshold: 2
            failureThreshold: 2
            periodSeconds: 10
            timeoutSeconds: 5
            httpGet:
              path: /
              port: http
      imagePullSecrets:
        - name: registry-credentials-gitlab
      # affinity:
      #   nodeAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       nodeSelectorTerms:
      #         - matchExpressions:
      #             - key: network
      #               operator: In
      #               values:
      #                 - servers-untrusted
      tolerations:
        - key: "node-role.kubernetes.io/master"
          operator: "Exists"
          effect: "NoSchedule"
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: byrnbaker-blog
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: registry
  namespace: byrnbaker-blog
  annotations:
    kubernetes.io/ingress.class: traefik-external

spec:
  entryPoints:
    - web
  routes:
    - match: Host(`blog.byrnbaker.me`)
      kind: Rule
      services:
        - name: byrnbaker-blog
          port: 80
